// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gospotcheck.api";
option java_outer_classname = "CompanyProto";
option objc_class_prefix = "CMPY";

package companysvc;

// Interface exported by the server.
service CompanySvc {
  // A simple RPC.
  //
  // Obtains the feature at a given position.
  //
  // A feature with an empty name is returned if there's no feature at the given
  // position.
  rpc GetCompanyFeature (CompanyPoint) returns (CompanyFeature) {}

  // A server-to-client streaming RPC.
  //
  // Obtains the Features available within the given Rectangle.  Results are
  // streamed rather than returned at once (e.g. in a response message with a
  // repeated field), as the rectangle may cover a large area and contain a
  // huge number of features.
  rpc ListCompanyFeatures (CompanyRectangle) returns (stream CompanyFeature) {}

  // A client-to-server streaming RPC.
  //
  // Accepts a stream of Points on a route being traversed, returning a
  // RouteSummary when traversal is completed.
  rpc RecordRoute (stream CompanyPoint) returns (CompanyRouteSummary) {}

  // A Bidirectional streaming RPC.
  //
  // Accepts a stream of RouteNotes sent while a route is being traversed,
  // while receiving other RouteNotes (e.g. from other users).
  rpc RouteChat (stream CompanyRouteNote) returns (stream CompanyRouteNote) {}
}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message CompanyPoint {
  int32 latitude = 1;
  int32 longitude = 2;
}

// A latitude-longitude rectangle, represented as two diagonally opposite
// points "lo" and "hi".
message CompanyRectangle {
  // One corner of the rectangle.
  CompanyPoint lo = 1;

  // The other corner of the rectangle.
  CompanyPoint hi = 2;
}

// A feature names something at a given point.
//
// If a feature could not be named, the name is empty.
message CompanyFeature {
  // The name of the feature.
  string name = 1;

  // The point where the feature is detected.
  CompanyPoint location = 2;
}

// Not used in the RPC.  Instead, this is here for the form serialized to disk.
message CompanyFeatureDatabase {
  repeated CompanyFeature feature = 1;
}

// A RouteNote is a message sent while at a given point.
message CompanyRouteNote {
  // The location from which the message is sent.
  CompanyPoint location = 1;

  // The message to be sent.
  string message = 2;
}

// A RouteSummary is received in response to a RecordRoute rpc.
//
// It contains the number of individual points received, the number of
// detected features, and the total distance covered as the cumulative sum of
// the distance between each point.
message CompanyRouteSummary {
  // The number of points received.
  int32 point_count = 1;

  // The number of known features passed while traversing the route.
  int32 feature_count = 2;

  // The distance covered in metres.
  int32 distance = 3;

  // The duration of the traversal in seconds.
  int32 elapsed_time = 4;
}
